tests/expectations/compiler/records/duplicate_var_fail.out
Error [ETYC0372016]: Record variable `owner` is already declared.
    --> compiler-test:6:9
     |
   5 |           owner: address,
     |           ^^^^^^^^^^^^^^ `owner` first declared here
   6 |           owner: address, // Cannot define two record variables with the same name.
     |           ^^^^^^^^^^^^^^ record variable already declared
Error [ETYC0372016]: Record variable `owner` is already declared.
    --> compiler-test:15:9
     |
  12 |           owner: address,
     |           ^^^^^^^^^^^^^^ `owner` first declared here
   ...
  15 |           owner: address,
     |           ^^^^^^^^^^^^^^ record variable already declared
Error [ETYC0372016]: Record variable `owner` is already declared.
    --> compiler-test:22:9
     |
  20 |           owner: address,
     |           ^^^^^^^^^^^^^^ `owner` first declared here
  21 |
  22 |           owner: address,
     |           ^^^^^^^^^^^^^^ record variable already declared
Error [ETYC0372016]: Record variable `amount` is already declared.
    --> compiler-test:23:9
     |
  21 |           amount: u64,
     |           ^^^^^^^^^^^ `amount` first declared here
  22 |
  23 |           amount: u64,
     |           ^^^^^^^^^^^ record variable already declared
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
